--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img
           class="logo"
           rel="icon"
-          src="Images/a74736d502746301ed573ed8940fc322 (2).png"
+          src="https://github.com/Phinophilip/Mermato/blob/052157fa98f22a9cce82a31519b3517cf3022a38/a74736d502746301ed573ed8940fc322%20(2).png"
           alt="Logo"
         />
         <span class="brand-name">MERMATO</span>
@@ -38,7 +38,7 @@
         <div class="overlay-content">
           <div class="icon-wrapper">
             <img
-              src="Images/a74736d502746301ed573ed8940fc322 (2).png"
+              src="https://github.com/Phinophilip/Mermato/blob/052157fa98f22a9cce82a31519b3517cf3022a38/a74736d502746301ed573ed8940fc322%20(2).png"
               alt="Icon"
               class="banner-icon"
             />
