--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
   <footer class="footer">
 <section class="features">
       <div class="feature-item">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20.svg" alt="High Quality Icon" class="feature-icon">
+        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector.svg" alt="High Quality Icon" class="feature-icon">
         <div class="feature-text">
           <h3 class="feature-title">High Quality</h3>
           <p class="feature-description">Crafted from top materials</p>
         </div>
       </div>
       <div class="feature-item">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(1).svg.svg" alt="Warranty Protection Icon" class="feature-icon">
+        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(1).svg" alt="Warranty Protection Icon" class="feature-icon">
         <div class="feature-text">
           <h3 class="feature-title">Warranty Protection</h3>
           <p class="feature-description">Over 2 years</p>
