--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img
           class="logo"
           rel="icon"
-          src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/a74736d502746301ed573ed8940fc322%20(2).png"
+          src="Images/a74736d502746301ed573ed8940fc322 (2).png"
           alt="Logo"
         />
         <span class="brand-name">MERMATO</span>
@@ -23,21 +23,22 @@
         <span class="nav-link">About</span>
         <span class="nav-link">Contact</span>
       </nav>
-        <div class="icon-container">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(4).svg" alt="Icon 1">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(5).svg" alt="Icon 2">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(6).svg" alt="Icon 3">
+      <div class="icon-container">
+        <img src="Images/Vector (4).svg" alt="Icon 1" />
+        <img src="Images/Vector (5).svg" alt="Icon 2" />
+        <img src="Images/Vector (6).svg" alt="Icon 3" />
+      </div>
     </div>
   </header>
 
   <body>
     <section class="banner">
       <div class="banner-content">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Rectangle%201.png" alt="blur" class="blur-image" />
+        <img src="Images/Rectangle 1.png" alt="blur" class="blur-image" />
         <div class="overlay-content">
           <div class="icon-wrapper">
             <img
-              src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/a74736d502746301ed573ed8940fc322%20(2).png"
+              src="Images/a74736d502746301ed573ed8940fc322 (2).png"
               alt="Icon"
               class="banner-icon"
             />
@@ -52,7 +53,19 @@
       </div>
     </section>
     <div class="cart-container">
+      <!-- Cart Items Section -->
       <section class="cart-items">
+        <div
+          id="no-items-message"
+          style="
+            display: none;
+            text-align: center;
+            font-weight: bold;
+            margin: 20px 0;
+          "
+        >
+          No items in the cart
+        </div>
         <table class="cart-table">
           <thead>
             <tr>
@@ -67,6 +80,7 @@
         </table>
       </section>
 
+      <!-- Cart Totals Section -->
       <aside class="cart-totals">
         <h2 class="totals-title">Cart Totals</h2>
         <div class="totals">
@@ -82,33 +96,50 @@
         <button class="checkout-button">Check Out</button>
       </aside>
     </div>
+
     <script src="script.js"></script>
   </body>
   <footer class="footer">
-<section class="features">
+    <section class="features">
       <div class="feature-item">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector.svg" alt="High Quality Icon" class="feature-icon">
+        <img
+          src="Images/Vector.svg"
+          alt="High Quality Icon"
+          class="feature-icon"
+        />
         <div class="feature-text">
           <h3 class="feature-title">High Quality</h3>
           <p class="feature-description">Crafted from top materials</p>
         </div>
       </div>
       <div class="feature-item">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(1).svg" alt="Warranty Protection Icon" class="feature-icon">
+        <img
+          src="Images/Vector (1).svg"
+          alt="Warranty Protection Icon"
+          class="feature-icon"
+        />
         <div class="feature-text">
           <h3 class="feature-title">Warranty Protection</h3>
           <p class="feature-description">Over 2 years</p>
         </div>
       </div>
       <div class="feature-item">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(2).svg" alt="Free Shipping Icon" class="feature-icon">
+        <img
+          src="Images/Vector (2).svg"
+          alt="Free Shipping Icon"
+          class="feature-icon"
+        />
         <div class="feature-text">
           <h3 class="feature-title">Free Shipping</h3>
           <p class="feature-description">Order over $150</p>
         </div>
       </div>
       <div class="feature-item">
-        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(3).svg" alt="Support Icon" class="feature-icon">
+        <img
+          src="Images/Vector (3).svg"
+          alt="Support Icon"
+          class="feature-icon"
+        />
         <div class="feature-text">
           <h3 class="feature-title">24/7 Support</h3>
           <p class="feature-description">Dedicated support</p>
