--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <section class="banner">
       <div class="banner-content">
-        <img src="Images/Rectangle 1.png" alt="blur" class="blur-image" />
+        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Rectangle%201.png" alt="blur" class="blur-image" />
         <div class="overlay-content">
           <div class="icon-wrapper">
             <img
