--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img
           class="logo"
           rel="icon"
-          src="Images/a74736d502746301ed573ed8940fc322 (2).png"
+          src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/a74736d502746301ed573ed8940fc322.png"
           alt="Logo"
         />
         <span class="brand-name">MERMATO</span>
@@ -24,9 +24,9 @@
         <span class="nav-link">Contact</span>
       </nav>
       <div class="icon-container">
-        <img src="Images/Vector (4).svg" alt="Icon 1" />
-        <img src="Images/Vector (5).svg" alt="Icon 2" />
-        <img src="Images/Vector (6).svg" alt="Icon 3" />
+        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(4).svg" alt="Icon 1" />
+        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(5).svg" alt="Icon 2" />
+        <img src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(6).svg" alt="Icon 3" />
       </div>
     </div>
   </header>
@@ -38,7 +38,7 @@
         <div class="overlay-content">
           <div class="icon-wrapper">
             <img
-              src="Images/a74736d502746301ed573ed8940fc322 (2).png"
+              src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/a74736d502746301ed573ed8940fc322.png"
               alt="Icon"
               class="banner-icon"
             />
@@ -103,7 +103,7 @@
     <section class="features">
       <div class="feature-item">
         <img
-          src="Images/Vector.svg"
+          src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20.svg"
           alt="High Quality Icon"
           class="feature-icon"
         />
@@ -114,7 +114,7 @@
       </div>
       <div class="feature-item">
         <img
-          src="Images/Vector (1).svg"
+          src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(1).svg"
           alt="Warranty Protection Icon"
           class="feature-icon"
         />
@@ -125,7 +125,7 @@
       </div>
       <div class="feature-item">
         <img
-          src="Images/Vector (2).svg"
+          src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(2).svg"
           alt="Free Shipping Icon"
           class="feature-icon"
         />
@@ -136,7 +136,7 @@
       </div>
       <div class="feature-item">
         <img
-          src="Images/Vector (3).svg"
+          src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20(3).svg"
           alt="Support Icon"
           class="feature-icon"
         />
