--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <section class="features">
       <div class="feature-item">
         <img
-          src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector%20.svg"
+          src="https://raw.githubusercontent.com/Phinophilip/Mermato/main/Vector.svg"
           alt="High Quality Icon"
           class="feature-icon"
         />
